Bash shell added to execute command